
==========================================================================

Version 1.8.3 patchlevel 10                     Apr ??, 2009

Minor changes:
 * @search and lsearch() now only charge 100 pennies if an evaluating
   search (EVAL, EPLAYER, EROOM, ETHING, EOBJECT, EEXIT or ELOCK) or
   an exhaustive attribute search (COMMAND, LISTEN) is performed.

Functions:
  * lpids(), getpids(), and pidinfo() provide information about
    wait/semaphore process ids and processes. Suggested by
    Yuriko@M*U*S*H, code by Javelin.

Fixes:
  * @pcreate without a password would crash the game. Fixed. [GM]
  * DARK-disconnected on channels was turned into DARK-connected, on
    disconnect. Reported by Paige@M*U*S*H, among others.
  * MOGRIFY`BLOCK wasn't being called, as help @channel6 said it was.
    Oops. [GM]
  * Some help fixes. [GM]
  * @clone could mess up the names of the original and the clone. 
    Reported by qa'toq. [SW]
  * Crash bugs in rand() and randword(). [SW]
  * Added --disable-zlib configure option to turn off using
    zlib to work directly with compressed databases. Passing this to
    configure makes the game act like pre p8 ones. [SW]
  * member() now ignores ANSI in matches. Reported by Minion. [MG]
  * Regexp $-commands are now ansi aware. As in: ansi is passed to %0-%9. [GM]

Version 1.8.3 patchlevel 9                      Feb 28, 2009

Fixes:
 * Starting up without an existing database was broken in p8.
   Reported by many people. [SW]
 * p8 didn't compile for many people for a number of reasons.
   [SW]
 * match() was broken. Reported by Kimiko. [SW]

Version 1.8.3 patchlevel 8                      Feb 26, 2009

Major changes:
 * @chan/mogrifier - Mogrify (mangle) any and all aspects of @channel
   chatter. e.g: make <Public> into [cilbuP]. [GM]

Minor changes:
 * The restart script appends a timestamp to the backups of
   existing databases and log files that it makes. Suggested
   by Ray,